# document_search_api

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  server.py
results_BERT_Default/: filenames.npy  text_index.faiss
results_BERT_Default/vectors/: garant_0016.txt  garant_0055.txt  garant_0078.txt  garant_0197.txt  garant_0274.txt  garant_0329.txt  garant_0449.txt  garant_0468.txt  garant_0537.txt  garant_0682.txt  garant_0976.txt  garant_1085.txt  garant_1261.txt  garant_1281.txt  garant_1337.txt  garant_1338.txt  garant_1425.txt  garant_1668.txt  garant_1794.txt  query_vector.txt
